Review: Scheduler checks if releases are empty, TelegramConfigService fails after 100 id generations, smaller findings